# kotae

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
common/: Cargo.toml
common/src/ir/: Cargo.toml
common/src/ir/src/: lib.rs  notify.rs  state.rs
common/src/util/: Cargo.toml
common/src/util/src/: lib.rs
docs/: lifecycle.md  reference.md
src/common/: package-lock.json  package.json
src/common/src/: index.ts  ir.ts  state.ts
src/common/src/blocks/: block_math.ts  block_scry.ts  block_slate.ts  block_text.ts  index.ts
src/common/src/history/: serializer.ts  undo_manager_simple.ts
src/common/src/ir/: block.ts  board.ts  frame.ts  index.ts  line.ts
src/common/src/layout/: frame.ts
src/math/: package.json
src/math/src/: index.ts
src/util/: Cargo.toml  package.json
src/util/examples/balls/: main.rs
src/util/src/: index.ts  lib.rs
src/util/src/debug/: error.rs  mod.rs  type_id.rs
src/util/src/entity/: entity.rs  lock.rs  (+1 more)
src/util/test/: part.test.ts
src/web/: justfile  package-lock.json  package.json  tailwind.config.js
src/web/electron/: main.js  package-lock.json  package.json
src/web/src/: main.ts  main.tsx  util.ts  view.tsx
src/web/src-tauri/: Cargo.toml  tauri.conf.json
src/web/static/: index.html
src/web/styles/: App.css  Background.css  Board.css  CommandBar.scss  Frame.css  MathBlock.css  ScryBlock.css  index.css
web/backend/: Cargo.toml
web/backend/src/: lib.rs
web/driver/: .gitignore  package-lock.json  package.json
web/driver/src/: main.ts
web/driver/static/: index.html
(+67 files in other folders)
