[package]
name = "mid-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Application
log = "0.4.17"
mid-util = { path = "../../common/src/util" }

# WASM integration
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
wasm-bindgen = "0.2.83"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
